# SpaceRace

./: .gitignore  README.md  index.html  package.json
assets/blend/: asteroids.blend  playership.blend  ufo.blend  untitled.blend
assets/meshes/: asteroid.stl  playership.stl  spaceship.stl  tunnel.stl  ufo.stl
assets/scripts/: asteroids.js  game.js  keyboard_input.js  main_scene.js
assets/textures/: space_travel.webm
space-race-backend/: Cargo.toml
space-race-backend/src/: main.rs
